# engineDirectX11

./: CMakeLists.txt
src/: main.cpp
src/Engine/: Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  SystemScheduler.cpp  SystemScheduler.h  UpdateSystem.cpp  UpdateSystem.h
src/Engine/components/: Camera.h  Mesh.h  Rotation.h  Scale.h  Transform.h
src/Engine/math/: Mat4.h  Vec3.h
src/Engine/rendering/: IRenderer.h  RenderBackend.h  RenderSystem.cpp  RenderSystem.h
src/Engine/rendering/DirectX11/: DX11Renderer.cpp  DX11Renderer.h
src/Engine/rendering/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h
